2019-04-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha09 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha09: Boulder Bay Proposal';git push
	git tag -a 4.8.0-alpha09 -m 'ncap2 allows no input file;ncremap --no_stdin';git push --tags

	* ncap2 uses FORCE_OVERWRITE to decide on append mode vs. dummy	input file in nco_fl_lst_mk()

2019-04-14  Charlie Zender  <zender@uci.edu>

	* Changes to kd.h and nco_crt.h suggested by Pedro for Windows compatibility

	* ncremap add option --no_stdin flag to explicitly turn-off checking stdin for input file list.
	Xylar realized this is necessary for ncremap to work in build environments that co-opt stdin for other purposes.

	* Allow ncap2 to have no positional arguments when no input filename and output specified by -o fl_out

2019-04-10  Charlie Zender  <zender@uci.edu>

	* Add stubs for ncap2 to use nco_fl_dmm_mk() to circumvent required input file argument

	* NCO 4.8.0-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha08: Whiskey Ginger Beer';git push
	git tag -a 4.8.0-alpha08 -m 'ncremap --vrt_fl pure pressure, CMIP ta & zg, mnt ncr/dcr';git push --tags

	* nco_ntp_vrt() Fix and validate increasing and decreasing input/output vertical grids

2019-04-08  Charlie Zender  <zender@uci.edu>

	* ncremap: Correct bug introduced in 4.8.0-alpha08 that only regrids when dbg_lvl > 1 (DOH!) noticed by Min Xu

2019-04-04  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() allow monotonically decreasing input or output grids

2019-04-03  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() Plumb for pure pressure grids

	* nco_ntp_vrt() Treat variables named "ta" and "zg" with temperature and geopotential height extrapolation rules, respectively

2019-04-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha07: Bond-o';git push
	git tag -a 4.8.0-alpha07 -m 'ncremap --vrt_fl features and optimizations';git push --tags
