@@ -353,12 +353,16 @@ int ncompi_open  (MPI_Comm mpi_cmm,const char * const fl_nm,const int omode,MPI_
 # ifndef NETCDF_MEM_H
   /* 20190130: struct NC_memio first defined in netcdf_mem.h in 4.6.2
      Define it here to use in stub functions compiled against earlier netCDF libraries */
-typedef struct NC_memio {
+#  ifndef _MSC_VER
+  /* 20190416: Kludge to prevent inexplicable Windows AppVeyor errors caused by apparent redefinition of NC_memio
+     Solution attempt #1 is to never define NC_memio for Windows for netCDF <= 4.6.1 */
+  typedef struct NC_memio {
   size_t size;
   void* memory;
   int flags;
 # define NC_MEMIO_LOCKED 1    /* Do not try to realloc or free provided memory */
 } NC_memio;
+#  endif /* _MSC_VER */
 # endif /* NETCDF_MEM_H */
 #endif /* 4.6.2 */
 
